--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cosmicmeow">View on GitHub</a>
 
-          <h1 id="project_title">Cosmicmeow.github.io</h1>
+          <h1 id="project_title"> My Person </h1>
           <h2 id="project_tagline">website</h2>
 
         </header>
