--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 			 More info: h5bp.com/b/378 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Gumby - A Flexible, Responsive CSS Framework - Powered by SASS</title>
+	<title>Lookmai Rattana</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="humans.txt">
 
-	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="ico/favicon.png" type="image/x-icon" />
 
 	<!-- Facebook Metadata /-->
 	<meta property="fb:page_id" content="" />
@@ -104,33 +104,140 @@
 
       <div class="four columns" style="background-color:#F1F1F2;padding:20px">
         <div class="navigation">
+          <img src="img/banner.png">
           <ul class="tab-nav">
             <li class="active"><a href="#">Web</a></li>
             <li><a href="#">Illustration</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
           </ul>
+          <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a>
 
-          <a href="https://twitter.com/cosmic_meow"><i class="icon-twitter-circled"></i></a>
-          <a href="https://twitter.com/cosmic_meow"><i class="icon-linkedin-circled"></i></a>
-          <a href="https://twitter.com/cosmic_meow"><i class="icon-github-circled"></i></a>
         </div>
       </div>
 
       <div class="eight columns" style="background-color:#F1F1F2;padding:20px">
 
+        <!-- Web -->
         <div class="tab-content active">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-          </p>
+          <div class="row">
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <a href="http://vinylmint.com"><img src="img/vinylmint_thumb.png"></a><br>
+                Internship at Vinylmint
+              </center>
+            </div>
+
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <a href="http://cs.odu.edu/~acm"><img src="img/oduacm_thumb.png"></a><br>
+                Web Developer at Old Dominion University - ACM
+              </center>
+            </div>
+          </div>
         </div>
 
+        <!-- Illustration -->
         <div class="tab-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...!!
-          </p>
+          <div class="row">
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <div class="modal" id="modal1">
+                  <div class="content">
+                    <a class="close switch" gumby-trigger="|#modal1"><i class="icon-cancel" /></i></a>
+                    <div class="row">
+                      <div class="ten columns centered text-center">
+                        <img src="img/hrtbusposter.png">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="switch" gumby-trigger="#modal1"><img src="img/hrtbusposter_thumb.png"></a>
+              </center>
+            </div>
+
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <div class="modal" id="modal2">
+                  <div class="content">
+                    <a class="close switch" gumby-trigger="|#modal2"><i class="icon-cancel" /></i></a>
+                    <div class="row">
+                      <div class="ten columns centered text-center">
+                        <img src="img/acmposter.png">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="switch" gumby-trigger="#modal2"><img src="img/acmposter_thumb.png"></a>
+              </center>
+            </div>
+          </div> <!-- ./row -->
+
+          <div class="row">
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <div class="modal" id="modal3">
+                  <div class="content">
+                    <a class="close switch" gumby-trigger="|#modal3"><i class="icon-cancel" /></i></a>
+                    <div class="row">
+                      <div class="ten columns centered text-center">
+                        <img src="img/oducfaposter.png">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="switch" gumby-trigger="#modal3"><img src="img/oducfaposter_thumb.png"></a>
+              </center>
+            </div>
+
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <div class="modal" id="modal4">
+                  <div class="content">
+                    <a class="close switch" gumby-trigger="|#modal4"><i class="icon-cancel" /></i></a>
+                    <div class="row">
+                      <div class="ten columns centered text-center">
+                        <img src="img/ndochposter.png">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="switch" gumby-trigger="#modal4"><img src="img/ndochposter_thumb.png"></a>
+              </center>
+            </div>
+          </div>
+
+          <div class="row"> 
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <div class="modal" id="modal5">
+                  <div class="content">
+                    <a class="close switch" gumby-trigger="|#modal5"><i class="icon-cancel" /></i></a>
+                    <div class="row">
+                      <div class="ten columns centered text-center">
+                        <img src="img/letsparty.png">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="switch" gumby-trigger="#modal5"><img src="img/letsparty_thumb.png"></a>
+              </center>
+            </div>
+
+            <div class="six columns" style="border:1px #000 solid;background-color:#fff">
+              <center>
+                <a href="http://757rb.org"><img src="img/757rb_thumb.png"></a>
+              </center>
+            </div>
+          </div>
+
         </div>
 
+        <!-- About -->
         <div class="tab-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...
+          <img src="img/meee.png"><br>
+          <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests front-end development, 3-D Modeling, and pixel illustration (<a href="http://hexraystudios.com/hexels/">Hexel</a> is the BEST!!). She is currently interning at Vinylmint and web developing for Association for Computer Machinery over at ODU. <br><br>
+          You can shoot her an email at <u>oratt001@gmail.com</u>. <br>
+          Or follow her on Twitter <a href="http://twitter.com/cosmic_meow">@cosmic_meow</a>.
           </p>
         </div>
 
