update for codeboard and instacycle and github link

--- a/index.html
+++ b/index.html
@@ -138,6 +138,26 @@
                 Web Developer<br>Old Dominion University ACM
               </center>
             </div>
+
+          </div> <!-- ./row -->
+          <br>
+          <div class="row">
+
+            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+              <center>
+                <a href="http://cosmicmeow.com/DEHack6"><img src="img/instacycle_thumb.png"></a><br>
+                Front End <br>Team Meh @ <a href="http://www.dominionenterprises.com/company/dominion-enterprises-hackathon-6-success">DE Hackathon 2013</a>
+              </center>
+            </div>
+
+            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+              <center>
+                <a href="http://cosmicmeow.com/codeboard"><img src="img/codeboard_thumb.png"></a><br>
+                Front End <br>Team Code Board @ <a href="http://www.y-hack.com/">Y-Hack 2013</a>
+              </center>
+            </div>
+
+            
           </div>
         </div>
 
@@ -182,7 +202,7 @@
           <img src="img/meee.png"><br>
           <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests front-end development, 3-D Modeling, and pixel illustration (<a href="http://hexraystudios.com/hexels/">Hexel</a> is the BEST!!). She is currently interning at Vinylmint and web developing for Association for Computer Machinery over at ODU. <br><br>
           You can shoot her an email at <u>oratt001@gmail.com</u>. <br><br>
-          <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="http://www.linkedin.com/pub/onapha-rattana/66/659/233"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a>
+          <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="http://www.linkedin.com/pub/onapha-rattana/66/659/233"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a> <a href="http://github.com/cosmicmeow"><img src="img/github.png"></a>
           </p>
         </div>
 
