--- a/index.html
+++ b/index.html
@@ -156,9 +156,20 @@
                 Front End <br>Team Code Board @ <a href="http://www.y-hack.com/">Y-Hack 2013</a>
               </center>
             </div>
+          </div> <!-- row -->
 
-            
-          </div>
+          <br>
+
+          <div class="row">
+
+            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+              <center>
+                <a href="http://cosmicmeow.com/Archimedes"><img src="img/archimedes_thumb.png"></a><br>
+                Front End <br>Team Archimedes @ <a href="http://www.mhacks.org/">M-Hacks 2014</a>
+              </center>
+            </div>
+
+          </div><!-- row -->
         </div>
 
         <!-- Print -->
