--- a/index.html
+++ b/index.html
@@ -206,12 +206,23 @@
              <a href="http://757rb.org"><img src="img/757rb_thumb.png"></a>
             </div>
           </div> <!-- /.row -->
+
+          <div class="row">
+            <div class="six columns">
+              <a href="http://www.norfolkjs.org/"><img src="img/norfolkjs_thumb.png"></a>
+           </div>
+           <div class="six columns">
+             <a href="https://play.google.com/store/apps/details?id=com.DWS.neighborhoodwatch"><img src="img/neighborhoodwatch_thumb.png"></a>
+            </div>
+          </div> <!-- /.row -->
+
+
         </div>
 
         <!-- About -->
         <div class="tab-content">
           <img src="img/meee.png"><br>
-          <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests in front-end development, 3-D Modeling, and pixel illustration (<a href="http://hexraystudios.com/hexels/">Hexel</a> is the BEST!!). She is currently interning at Vinylmint and web developing for Association for Computer Machinery over at ODU. <br><br>
+          <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests in front-end development, 3-D Modeling, and pixel illustration. She is currently interning at <a href="http://thisisgrow.com" target="_blank">Grow</a> and web developing for Association for Computer Machinery over at ODU. <br><br>
           You can shoot her an email at <u>oratt001@gmail.com</u>. <br><br>
           <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="http://www.linkedin.com/pub/onapha-rattana/66/659/233"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a> <a href="http://github.com/cosmicmeow"><img src="img/github.png"></a>
           </p>
