--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
         <div class="navigation">
           <img src="img/banner.png">
           <ul class="tab-nav">
-            <li class="active"><a href="#">Web</a></li>
+            <li><a href="#">Web</a></li>
             <li><a href="#">Print</a></li>
             <li><a href="#">Illustration</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Experience</a></li>
+            <li class="active"><a href="#">About</a></li>
           </ul><br>
           <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a>
 
@@ -123,7 +124,10 @@
       <div class="eight columns" style="background-color:#F1F1F2;padding:20px">
 
         <!-- Web -->
-        <div class="tab-content active">
+        <div class="tab-content">
+          <h4>Front End Experience</h4>
+          <p>Tools of trade included HTML, CSS, SCSS, LESS, and Javascript.</p>
+          <hr>
           <div class="row">
             <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
               <center>
@@ -168,13 +172,21 @@
                 Front End <br>Team Archimedes @ <a href="http://www.mhacks.org/">M-Hacks 2014</a>
               </center>
             </div>
+            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+              <center>
+                <a href="http://cs.odu.edu/~410red"><img src="img/archimedes_thumb.png"></a><br>
+                Front End <br>Corsica @ <a href="http://www.mhacks.org/">ODU - CS410</a>
+              </center>
+            </div>
 
           </div><!-- row -->
         </div>
 
         <!-- Print -->
         <div class="tab-content">
-
+          <h4>Print</h4>
+          <p>Tools of trade included Adobe Photoshop, Adobe Illustrator, and Hexel. Included samples are flyers made for organizations such as the local <a href="">Code for America</a>, ODU's <a href="">ACM</a>, and ODU's Video Game Design and Development Club.</p>
+          <hr>
           <div class="row">
             <div class="six columns">
               <a href="img/hrtbusposter.png" class="fresco" data-fresco-group="prints"><img src="img/hrtbusposter_thumb.png"></a>
@@ -187,10 +199,20 @@
           <div class="row">
             <div class="six columns">
               <a href="img/acmposter.png" class="fresco" data-fresco-group="prints"><img src="img/acmposter_thumb.png"></a>
-           </div>
+            </div>
 
-           <div class="six columns">
-             <a href="img/oducfaposter.png" class="fresco" data-fresco-group="prints"><img src="img/oducfaposter_thumb.png"></a>
+            <div class="six columns">
+              <a href="img/oducfaposter.png" class="fresco" data-fresco-group="prints"><img src="img/oducfaposter_thumb.png"></a>
+            </div>
+          </div> <!-- /.row -->
+
+          <div class="row">
+            <div class="six columns">
+              <a href="img/acmposter.png" class="fresco" data-fresco-group="prints"><img src="img/acmposter_thumb.png"></a>
+            </div>
+
+            <div class="six columns">
+              <a href="img/oducfaposter.png" class="fresco" data-fresco-group="prints"><img src="img/oducfaposter_thumb.png"></a>
             </div>
           </div> <!-- /.row -->
 
@@ -198,31 +220,45 @@
 
         <!-- Illustration -->
         <div class="tab-content">
+          <h4>Illustration</h4>
+          <p>Tools of trade included Adobe Photoshop, Adobe Illustrator, and Hexel. Now and then I also dabble into traditional drawing such as ink on paper.</p>
+          <hr>
           <div class="row">
             <div class="six columns">
               <a href="img/letsparty.png" class="fresco" data-fresco-group="illustration"><img src="img/letsparty_thumb.png"></a>
            </div>
            <div class="six columns">
-             <a href="http://757rb.org"><img src="img/757rb_thumb.png"></a>
+             <a target="_blank" href="http://757rb.org"><img src="img/757rb_thumb.png"></a>
             </div>
           </div> <!-- /.row -->
 
           <div class="row">
             <div class="six columns">
-              <a href="http://www.norfolkjs.org/"><img src="img/norfolkjs_thumb.png"></a>
+              <a target="_blank" href="http://www.norfolkjs.org/"><img src="img/norfolkjs_thumb.png"></a>
            </div>
            <div class="six columns">
-             <a href="https://play.google.com/store/apps/details?id=com.DWS.neighborhoodwatch"><img src="img/neighborhoodwatch_thumb.png"></a>
+             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.DWS.neighborhoodwatch"><img src="img/neighborhoodwatch_thumb.png"></a>
             </div>
           </div> <!-- /.row -->
 
 
         </div>
 
-        <!-- About -->
+        <!-- Experience -->
         <div class="tab-content">
+          <h4>Experience</h4>
+          <hr>
+          <h5>Work Experience</h5>
+          <b>Grow</b> <i class="icon-right-open-mini"></i>Developer Intern <br>
+          <span class="grey">January 2014 – Present (4 months) | Norfolk, Virginia</span>
+        </div>
+
+        <!-- About -->
+        <div class="tab-content active">
+          <h4>About Me</h4>
+          <hr>
           <img src="img/meee.png"><br>
-          <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests in front-end development, 3-D Modeling, and pixel illustration. She is currently interning at <a href="http://thisisgrow.com" target="_blank">Grow</a> and web developing for Association for Computer Machinery over at ODU. <br><br>
+          <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests in front-end development, a little bit of 3-D Modeling, and pixel illustration. She is currently interning at <a href="http://thisisgrow.com" target="_blank">Grow</a> and web developing for Association for Computer Machinery over at ODU. <br><br>
           You can shoot her an email at <u>oratt001@gmail.com</u>. <br><br>
           <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="http://www.linkedin.com/pub/onapha-rattana/66/659/233"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a> <a href="http://github.com/cosmicmeow"><img src="img/github.png"></a>
           </p>
