--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
 	<![endif]-->
 
-  
+
   <div class="row">
     <section class="tabs">
 
@@ -287,9 +287,9 @@
               CS381: Introduction to Discrete Structures<br>
               CS410: Professional Workforce Development I<br>
               CS411: Professional Workforce Development II<br>
-              CS418: Web Programming<br> 
-              CS460: Computer Graphics<br> 
-              CS471: Operating Systems<br> 
+              CS418: Web Programming<br>
+              CS460: Computer Graphics<br>
+              CS471: Operating Systems<br>
               CS495: Introduction to Web Science
             </p>
           </div>
@@ -327,7 +327,7 @@
               MATH316: Linear Algebra <i>(In Progress)</i>
             </p>
           </div>
-          
+
           <br><hr><br>
 
           <h5><u>Awards</u></h5>
@@ -361,15 +361,32 @@
           <hr>
 
           <h4>Get In Touch!</h4>
-          
-          <form>
+<!--
+          <form method="POST" role="form" action="contact.php">
+						<div class = "form-group">
             <ul>
-            <li class="field"><input class="text input" type="text" placeholder="Your Name" /></li>
-            <li class="field"><input class="email input" type="email" placeholder="Your Email" /></li>
-            <li class="field"><textarea class="input textarea" placeholder="Message" rows="3"></textarea></li>
+            <li class="field"><input class="text input" type="text" name="name" placeholder="Your Name" /></li>
+            <li class="field"><input class="email input" type="email" name="email" placeholder="Your Email" /></li>
+            <li class="field"><textarea class="input textarea" placeholder="Message" rows="3" name="comment"></textarea></li>
           </ul>
-            <div class="medium btn primary"><a href="#">Submit</a></div>
+            <button-type="submit" class="medium btn primary">Submit</button>
+					</div>
           </form>
+				-->
+					<form method="POST" role="form" action="contact.php">
+				  <div class="form-group">
+				    <input type="name" class="form-control text email" name="name" placeholder="Your Name">
+				    <br>
+				  </div>
+				  <div class="form-group">
+				    <input type="email" class="form-control text email" name="email" placeholder="Enter email">
+				    <br>
+				  </div>
+				  <textarea class="form-control input textarea " name="comment" rows="6" placeholder="Enter your text here"></textarea>
+				    <br>
+				 <center> <button type="submit" class="btn btn-success">SUBMIT</button>
+		     </center>
+    	</form>
         </div>
 
       </div>
@@ -379,9 +396,8 @@
 
 
   <script src="js/banana.js"></script>
-  
+
 
 
   </body>
 </html>
-
