opps forgot to add feed class

--- a/playground/itsdone_feed.html
+++ b/playground/itsdone_feed.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="header"><h1>Feed</h1></div>
-	<div class="contents">
+	<div class="contents feed">
 
 		<div class="row container">
 			<div class="row-content">
