removed folder, fixed looping

--- a/mercy.html
+++ b/mercy.html
@@ -17,7 +17,6 @@ iframe {
 </style>
 </head>
 <body>
-<iframe id="ytplayer" type="text/html" width="1920" height="1080"
-src="http://www.youtube.com/embed/MFu9_Bis38s?autoplay=1&controls=0&loop=1&showinfo=0&modestbranding=1&iv_load_policy=3&VQ=HD1080" frameborder="0"/>
+<iframe id="ytplayer" type="text/html" width="1920" height="1080" src="http://www.youtube.com/embed/MFu9_Bis38s?autoplay=1&controls=0&loop=1&showinfo=0&modestbranding=1&iv_load_policy=3&VQ=HD1080&playlist=MFu9_Bis38s" frameborder="0"/>
 </body>
 </html>
