--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <li><a href="#">Web</a></li>
             <li><a href="#">Print</a></li>
             <li><a href="#">Illustration</a></li>
-            <li><a href="#">Experience</a></li>
+            <li><a href="#">ETC..</a></li>
             <li class="active"><a href="#">About</a></li>
           </ul><br>
-          <a href="http://twitter.com/cosmic_meow" target="_blank"><img src="img/twitter_c.png"></a>
+          <a href="http://twitter.com/cosmic_meow" target="_blank" style="margin-right: 10px;"><img src="img/twitter_c.png"></a><a href="http://instagram.com/cosmicmeowdraws" target="_blank"><img src="img/instagram.png"></a>
 
         </div>
       </div>
@@ -128,66 +128,62 @@
         <!-- Web -->
         <div class="tab-content">
           <h4>Front End Experience</h4>
-          <p>Tools of trade included HTML, CSS, SCSS, LESS, and Javascript.</p>
+          <p>Tools of trade included HTML, CSS, SCSS, LESS, and a bunch of Javascript.</p>
           <hr>
+
           <div class="row">
-            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+            <div class="six columns">
               <center>
-                <a href="http://vinylmint.com" target="_blank"><img src="img/vinylmint_thumb.png"></a><br>
-                Intern<br>Vinylmint
+                <a href="http://rickmobile.com" target="_blank"><img src="img/rickmobile_thumb.png"></a>
               </center>
             </div>
 
-            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+            <div class="six columns">
               <center>
-                <a href="http://cs.odu.edu/~acm" target="_blank"><img src="img/oduacm_thumb.png"></a><br>
-                Web Developer<br>Old Dominion University ACM
+                <a href="http://thisisgrow.com/work/shopping-insights" target="_blank"><img src="img/dataviz_thumb.png"></a>
               </center>
             </div>
 
           </div> <!-- ./row -->
-          <br>
-          <div class="row">
-
-            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
-              <center>
-                <a href="http://cosmicmeow.com/DEHack6" target="_blank"><img src="img/instacycle_thumb.png"></a><br>
-                Front End <br>Team Meh @ <a href="http://www.dominionenterprises.com/company/dominion-enterprises-hackathon-6-success">DE Hackathon 2013</a>
-              </center>
-            </div>
-
-            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
-              <center>
-                <a href="http://cosmicmeow.com/codeboard" target="_blank"><img src="img/codeboard_thumb.png"></a><br>
-                Front End <br>Team Code Board @ <a href="http://www.y-hack.com/">Y-Hack 2013</a>
-              </center>
-            </div>
-          </div> <!-- row -->
 
           <br>
-
           <div class="row">
-
-            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
+            <div class="six columns">
               <center>
-                <a href="http://cosmicmeow.com/Archimedes" target="_blank"><img src="img/archimedes_thumb.png"></a><br>
-                Front End <br>Team Archimedes @ <a href="http://www.mhacks.org/">M-Hacks 2014</a>
-              </center>
-            </div>
-            <div class="six columns" style="border:1px #9E9786 solid;background-color:#fff">
-              <center>
-                <a href="http://cs.odu.edu/~410red" target="_blank"><img src="img/corsica_thumb.png"></a><br>
-                Front End <br>Corsica @ <a href="http://www.mhacks.org/">ODU - CS410</a>
+                <a href="http://thisisgrow.com/work/matpats-gamelab" target="_blank"><img src="img/matpat_thumb.png"></a>
               </center>
             </div>
 
-          </div><!-- row -->
+            <div class="six columns">
+              <center>
+                <a href="http://thisisgrow.com/work/madden-giferator" target="_blank"><img src="img/giferator_thumb.png"></a>
+              </center>
+            </div>
+
+          </div> <!-- ./row -->
+
+          <br>
+          <div class="row">
+            <div class="six columns">
+              <center>
+                <a href="http://vibrantspaces.com" target="_blank"><img src="img/vibrant_thumb.png"></a>
+              </center>
+            </div>
+            
+            <div class="six columns">
+              <center>
+                <a href="http://cs.odu.edu/~410red" target="_blank"><img src="img/corsica_thumb.png"></a>
+              </center>
+            </div>
+
+          </div> <!-- ./row -->
+
         </div>
 
         <!-- Print -->
         <div class="tab-content">
           <h4>Print</h4>
-          <p>Tools of trade included Adobe Photoshop, Adobe Illustrator, and Hexel. Included samples are flyers made for organizations such as the local <a href="">Code for America</a>, ODU's <a href="">ACM</a>, and ODU's Video Game Design and Development Club.</p>
+          <p>Tools of trade included Adobe Photoshop and Adobe Illustrator. Included samples are flyers made for organizations such as the local <a href="">Code for America</a>, ODU's <a href="">ACM</a>, and ODU's Video Game Design and Development Club.</p>
           <hr>
           <div class="row">
             <div class="six columns">
@@ -222,23 +218,39 @@
         <!-- Illustration -->
         <div class="tab-content">
           <h4>Illustration</h4>
-          <p>Tools of trade included Adobe Photoshop, Adobe Illustrator, and Hexel. Now and then I also dabble into traditional drawing such as ink on paper.</p>
+          <p>Tools of trade included Adobe Photoshop and Adobe Illustrator.</p>
           <hr>
           <div class="row">
             <div class="six columns">
               <a href="img/letsparty.png" class="fresco" data-fresco-group="illustration"><img src="img/letsparty_thumb.png"></a>
-           </div>
-           <div class="six columns">
-             <a target="_blank" href="http://757rb.org"><img src="img/757rb_thumb.png"></a>
+            </div>
+            <div class="six columns">
+             <a target="_blank" href="http://www.jelly-ball.com/"><img src="img/jellyball_thumb.png"></a>
+            </div>
+          </div> <!-- /.row -->
+
+
+          <div class="row">
+            <div class="six columns">
+              <a target="_blank" href="http://www.fullstacktraining.com/"><img src="img/meanstack_thumb.png"></a>
+            </div>
+            <div class="six columns">
+             <a target="_blank" href="http://hrnug.org/"><img src="img/hrnug_thumb.png"></a>
             </div>
           </div> <!-- /.row -->
 
           <div class="row">
             <div class="six columns">
               <a target="_blank" href="http://www.norfolkjs.org/"><img src="img/norfolkjs_thumb.png"></a>
-           </div>
-           <div class="six columns">
-             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.DWS.neighborhoodwatch"><img src="img/neighborhoodwatch_thumb.png"></a>
+            </div>
+            <div class="six columns">
+             <a target="_blank" href="http://mullet.io/"><img src="img/mulletio_thumb.png"></a>
+            </div>
+          </div> <!-- /.row -->
+
+          <div class="row">
+            <div class="six columns">
+              <a target="_blank" href="https://play.google.com/store/apps/details?id=com.DWS.neighborhoodwatch"><img src="img/neighborhoodwatch_thumb.png"></a>
             </div>
           </div> <!-- /.row -->
 
@@ -250,8 +262,8 @@
           <h4>Experience</h4>
           <hr>
           <h5><u>Work Experience</u></h5>
-          <a href="">Grow</a><i class="icon-right-open-mini"></i>Developer Intern <br>
-          <span class="grey">January 2014 – Present (4 months) | Norfolk, Virginia</span>
+          <a href="">Grow</a><i class="icon-right-open-mini"></i>Developer<br>
+          <span class="grey">January 2014 – June 2017 (3 years)| Norfolk, Virginia</span>
           <br><br>
 
           <a href="">Vinylmint</a><i class="icon-right-open-mini"></i>Developer Intern <br>
@@ -264,69 +276,6 @@
 
           <a href="">Department of Urban Study and Public Administration</a><i class="icon-right-open-mini"></i>Office Assistant<br>
           <span class="grey">September 2011 – December 2012 (1 year 4 months) | Old Dominion University, Norfolk, Virginia</span>
-
-          <br><hr><br>
-
-          <h5 style="display:inline"><u>Education</u></h5><i class="icon-right-open-mini"></i><span class="grey">Bachelor in Computer Science | Old Dominion University</span><br>
-          <div id="course_CS">
-            <i class="icon-right-dir"></i><a href="#" class="toggle" gumby-trigger="#cs_courses">Computer Science Courses</a>
-          </div>
-          <div class="drawer" id="cs_courses">
-            <p class="drawer_p">
-              CS110: Introduction to Computer Science<br>
-              CS120: Introducton to Information Literacy and Research<br>
-              CS150: Problem Solving and Programing I<br>
-              CS250: Problem Solving and Programing II<br>
-              CS252: Introduction to Unix for Programmers<br>
-              CS170: Introduction to Computer Architecture I<br>
-              CS270: Introduction to Computer Architecture II<br>
-              CS300: Computers in Society<br>
-              CS330: Object-Oriented Programming and Design<br>
-              CS350: Introduction to Software Engineering<br>
-              CS361: Advanced Data Structures and Algorithms<br>
-              CS381: Introduction to Discrete Structures<br>
-              CS410: Professional Workforce Development I<br>
-              CS411: Professional Workforce Development II<br>
-              CS418: Web Programming<br>
-              CS460: Computer Graphics<br>
-              CS471: Operating Systems<br>
-              CS495: Introduction to Web Science
-            </p>
-          </div>
-
-          <div id="course_general">
-            <i class="icon-right-dir"></i><a href="#" class="toggle" gumby-trigger="#gen_courses">General Education Courses</a>
-          </div>
-          <div class="drawer" id="gen_courses">
-            <p class="drawer_p">
-              ENGL110: English Composition I<br>
-              ENGL211: English Composition II<br>
-              ENGL112: Introduction to Literature<br>
-              COMM101: Public Speaking<br>
-              ARTS122: Visual Communication<br>
-              HIS111: History of World Civilizations I<br>
-              PHIL110: Introduction to Philosophy<br>
-              BIOL115: General Biology I<br>
-              BIOL116: General Biology II<br>
-              OEAS106: Introductory Oceanography I<br>
-              OEAS107: Introductory Oceanography II<br>
-              PSYC201: Introduction to Psychology<br>
-              IT325: Web Site and Web Page Design<br>
-              IT430: Object-Oriented Programming with Java
-            </p>
-          </div>
-
-          <div id="course_math">
-            <i class="icon-right-dir"></i><a href="#" class="toggle" gumby-trigger="#math_courses">Mathematical Courses</a>
-          </div>
-          <div class="drawer" id="math_courses">
-            <p class="drawer_p">
-              MATH211: Calculus I<br>
-              MATH212: Calculus II<br>
-              STAT330: Introduction to Probability and Statistics<br>
-              MATH316: Linear Algebra <i>(In Progress)</i>
-            </p>
-          </div>
 
           <br><hr><br>
 
@@ -353,8 +302,8 @@
           <h4>About Me</h4>
           <hr>
           <img src="img/profilepic.png" class=""><br>
-          <p>Lookmai Rattana is a Computer Science undergraduate student at Old Dominion University. She interests in front-end development, a little bit of 3-D Modeling, and pixel illustration. She is currently interning at <a href="http://thisisgrow.com" target="_blank">Grow</a> and web developing for Association for Computer Machinery over at ODU. <br><br>
-          You can shoot her an email at <u>oratt001@gmail.com</u>. <br><br>
+          <p>Lookmai Rattana is a freelance frontend developer/designer and illustrator. She is currently finishing her CS bachelor degree at Old Dominion University.<br><br>
+          You can shoot her an email at <u>cosmicmeow.works@gmail.com</u>. <br><br>
           <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="http://www.linkedin.com/pub/onapha-rattana/66/659/233"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a> <a href="http://github.com/cosmicmeow"><img src="img/github.png"></a>
           </p>
 
