--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="navigation">
           <img src="img/banner.png">
           <ul class="tab-nav">
-            <li><a href="#">Web</a></li>
+            <li><a href="#">Web Works</a></li>
             <li><a href="#">Print</a></li>
             <li><a href="#">Illustration</a></li>
             <li><a href="#">ETC..</a></li>
@@ -304,7 +304,7 @@
           <img src="img/profilepic.png" class=""><br>
           <p>Lookmai Rattana is a freelance frontend developer/designer and illustrator. She is currently finishing her CS bachelor degree at Old Dominion University.<br><br>
           You can shoot her an email at <u>cosmicmeow.works@gmail.com</u>. <br><br>
-          <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="http://www.linkedin.com/pub/onapha-rattana/66/659/233"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a> <a href="http://github.com/cosmicmeow"><img src="img/github.png"></a>
+          <a href="http://twitter.com/cosmic_meow"><img src="img/twitter_c.png"></a> <a href="https://www.linkedin.com/in/lookmai-rattana-23365966/"><img src="img/linkedin.png"></a> <a href="http://cosmicmeoww.tumblr.com/"><img src="img/tumblr.png"></a> <a href="http://github.com/cosmicmeow"><img src="img/github.png"></a>
           </p>
 
           <hr>
